--- a/jupyter-demo.ipynb
+++ b/jupyter-demo.ipynb
@@ -18,6 +18,13 @@
     "Once you have reached the end of this worksheet you should try generating a PDF of the notebook \n",
     "and submit it on Gradescope (linked on Learn) using the Workshop 0 assignment.\n",
     "\n",
+    "*italic*\n",
+    "**bold**\n",
+    "~~strikethrough~~\n",
+    "\n",
+    "1. One\n",
+    "2. Two\n",
+    "3. Three\n",
     "---"
    ]
   },
@@ -25,7 +32,8 @@
    "cell_type": "markdown",
    "metadata": {
     "cell_id": "00001-f8196d86-a5be-4f65-bac2-f23276b5c290",
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "tags": []
    },
    "source": [
     "## 1. Jupyter notebooks\n",
@@ -66,7 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Another\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Another\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "cell_id": "00002-a7b5825c-bbd2-420b-a11d-082795d37081",
     "deepnote_cell_type": "code",
@@ -76,9 +101,37 @@
     "output_cleared": true,
     "source_hash": "eb01f365"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a code cell!\n"
+     ]
+    }
+   ],
    "source": [
     "print('This is a code cell!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
    ]
   },
   {
@@ -103,6 +156,17 @@
     "deepnote_cell_type": "markdown",
     "tags": []
    },
+   "source": [
+    "# Heading 1\n",
+    "\n",
+    "## Heading 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -134,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "cell_id": "00005-ca177332-a6b8-43ec-9df0-f3950b5cca17",
     "deepnote_cell_type": "code",
@@ -145,7 +209,15 @@
     "source_hash": "3c2aebfa",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.5\n"
+     ]
+    }
+   ],
    "source": [
     "from platform import python_version\n",
     "print(python_version())"
@@ -165,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "cell_id": "00010-099ada6e-42a1-4aba-a238-47dc02489332",
     "deepnote_cell_type": "code",
@@ -217,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
