--- a/jupyter-demo.ipynb
+++ b/jupyter-demo.ipynb
@@ -26,6 +26,7 @@
     "2. Two\n",
     "3. Three\n",
     "4. Four\n",
+    "5. Five\n",
     "\n",
     "---"
    ]
@@ -132,9 +133,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
